// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateGrowthLineLayout > snapshot de geometria — 4 degraus 1`] = `
{
  "points": "10,70 40,70 40,55 70,55 70,40 100,40 100,25 130,25 130,10",
  "viewBox": "0 0 140 80",
}
`;

exports[`generateNodeBranchLayout > snapshot de geometria — anchor=corner produz layout diferente de field 1`] = `
{
  "paths": [
    "M 40 200 L 80 160",
    "M 80 160 L 120 120",
    "M 120 120 L 120 80",
    "M 120 80 A 40 40 0 0 1 160 40",
    "M 80 160 L 120 160",
    "M 120 160 L 160 160",
    "M 160 160 A 40 40 0 0 1 200 200",
    "M 120 160 L 160 120",
    "M 40 200 L 40 160",
    "M 40 160 L 0 120",
    "M 0 120 L 0 80",
    "M 0 80 A 40 40 0 0 1 40 40",
    "M 40 160 L 80 120",
    "M 80 120 L 80 80",
    "M 80 80 A 40 40 0 0 1 120 40",
    "M 80 120 L 120 80",
    "M 120 80 A 40 40 0 0 1 176.57 80",
  ],
  "viewBox": "0 0 200 200",
}
`;

exports[`generateNodeBranchLayout > snapshot de geometria — density=default, anchor=field 1`] = `
{
  "paths": [
    "M 40 200 L 80 160",
    "M 80 160 L 120 120",
    "M 120 120 L 120 80",
    "M 120 80 A 40 40 0 0 1 160 40",
    "M 80 160 L 120 160",
    "M 120 160 L 160 160",
    "M 160 160 A 40 40 0 0 1 200 200",
    "M 120 160 L 160 120",
    "M 40 200 L 40 160",
    "M 40 160 L 0 120",
    "M 0 120 L 0 80",
    "M 0 80 A 40 40 0 0 1 40 40",
    "M 40 160 L 80 120",
    "M 80 120 L 80 80",
    "M 80 80 A 40 40 0 0 1 120 40",
    "M 80 120 L 120 80",
    "M 120 80 A 40 40 0 0 1 176.57 80",
    "M 160 200 L 120 160",
    "M 40 120 A 40 40 0 0 1 40 63.43",
    "M 80 160 L 40 160",
    "M 40 160 A 40 40 0 0 1 0 120",
    "M 80 80 A 40 40 0 0 1 120 40",
    "M 80 120 L 40 80",
    "M 40 80 A 40 40 0 0 1 40 23.43",
    "M 160 200 L 160 160",
    "M 200 120 L 200 80",
    "M 80 120 A 40 40 0 0 1 40 80",
    "M 120 80 A 40 40 0 0 1 160 40",
  ],
  "viewBox": "0 0 200 200",
}
`;
